# learn_ros

ros_learning/ros学习总结/: ubuntu操作指令
ros_learning/ros学习总结/第一次学习2017暑假/: ROS安装流程.txt  gazebo模拟的时候config配置文件.txt  ros里面的小知识.txt  tf 代码解释.txt  urdf的代码介绍.txt  xarco的代码解释.txt  有关urdf的launch设置的知识.txt
ros_learning/ros学习资料/: ros学习实用网址.txt  slam文档4.9.docx  ubuntukylin14.04中安装ros的方法.txt  ubuntu里面一些实用的插件.txt
ros_learning/第二次ros学习之旅/: ROS学习之旅1  ROS学习的流程
ros_learning/第二次ros学习之旅/ROS_Robot_Programming学习笔记/: ROS学习之旅1  编程实践的错误
ros_learning/第二次ros学习之旅/ROS机器人开发实践学习笔记/: 第01章  第03章
ros_learning/第二次ros学习之旅/ros机器人高效编程学习笔记/: 第2章 ROS架构及概念
ros_learning/第二次ros学习之旅/附录/URDF和xacro文件注释/URDF文件注释/原文件/: testbot.urdf
ros_learning/第二次ros学习之旅/附录/URDF和xacro文件注释/URDF文件注释/注释文件/: testbot.urdf
ros_learning/第二次ros学习之旅/附录/URDF和xacro文件注释/XACRO文件注释/注释文件/: open_manipulator.gazebo.xacro  open_manipulator.urdf.xacro
ros_learning/第二次ros学习之旅/附录/package和CMakeLists标准模板/原版/: CMakeLists.txt  package.xml
ros_learning/第二次ros学习之旅/附录/package和CMakeLists标准模板/注释版/: CMakeLists.txt  package.xml
ros_learning/第二次ros学习之旅/附录/turtlebot3_navigation包文件解释/: turtlebot3_navigation包文件解释
ros_learning/第二次ros学习之旅/附录/turtlebot3_navigation包文件解释/costmap文件-占用网格地图注释/注释版/: costmap_common_params_burger.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
ros_learning/第二次ros学习之旅/附录/turtlebot3_navigation包文件解释/turtlebot3_move_base文件注释/注释版/: move_base_params.yaml
ros_learning/第二次ros学习之旅/附录/turtlebot3_navigation包文件解释/turtlebot3_navigation_launch文件注释/注释版/: amcl.launch注释.xml  turtlebot3_navigation.launch
ros_learning/第二次ros学习之旅/附录/turtlebot3_navigation包文件解释/地图文件注释/原版/: map.yaml
ros_learning/第二次ros学习之旅/附录/turtlebot3_navigation包文件解释/地图文件注释/注释版/: map.yaml
ros_learning/第二次ros学习之旅/附录/turtlebot3_slam_gmapping的launch文件注释/注释文件/: turtlebot3_slam.launch
